<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".adminSideFragments.DonePatientRecyclerView.ShowPatientPrescription"
    android:background="@color/white"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/prescriptionVeiw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/patientListLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prescription"
            android:textSize="@dimen/_26sdp"
            android:fontFamily="@font/arbutus"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_app_green"
            android:textStyle="bold"/>

        <View
            android:layout_width="180dp"
            android:layout_height="4dp"
            app:layout_constraintTop_toBottomOf="@+id/patientListLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/darker_app_green"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rsnLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/reason_for_oxygen_therapy"
                android:textColor="@color/text_black"/>
            <TextView
                android:id="@+id/et_rsn"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:singleLine="false"
                android:text="@string/lorem_ipsum"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deliverySystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/deliverySystemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_system_used"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/et_deliverySystem"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:backgroundTint="@color/darker_app_green"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:singleLine="false"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/flowRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow_rate"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/et_flowRate"
                android:backgroundTint="@color/darker_app_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/humidificationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidification"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/et_humidification"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/target_saturation"
                android:textColor="@color/text_black"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/et_saturation"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/weaningInstLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weaning_instructions"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/et_weaningInst"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/doctorNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_s_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/designationLebel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/kmcNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmc_number"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:text="@string/lorem_ipsum"
                android:id="@+id/kmc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_green"
                android:singleLine="false"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showFormBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/lighter_app_green"
            android:layout_gravity="center"
            android:text="@string/show_checklist"
            android:outlineAmbientShadowColor="@color/darker_app_green"
            android:textColor="@color/darker_app_green"
            android:layout_marginTop="@dimen/_20sdp" />
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_500sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/errMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetching_error_msg"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/arbutus"
            android:textColor="@color/error_red"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/errorImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/error_pic"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>