<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".adminSideFragments.PostTherapyFormFragment"
    android:background="@color/white"
    android:padding="@dimen/_10sdp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/patientListLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prescription"
            android:textSize="@dimen/_26sdp"
            android:fontFamily="@font/arbutus"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_app_blue"
            android:textStyle="bold"/>

        <View
            android:layout_width="180dp"
            android:layout_height="4dp"
            app:layout_constraintTop_toBottomOf="@+id/patientListLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/darker_app_blue"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rsnLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/reason_for_oxygen_therapy"
                android:textColor="@color/text_black"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_rsn"
                android:backgroundTint="@color/darker_app_blue"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:singleLine="false"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/flowRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow_rate"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_flowRate"
                android:backgroundTint="@color/darker_app_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:singleLine="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/humidificationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidification"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_humidification"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_blue"
                android:singleLine="false"/>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_15sdp"-->
<!--            android:orientation="vertical">-->
<!--            <TextView-->
<!--                android:id="@+id/targetSaturationLabel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/target_saturation"-->
<!--                android:textColor="@color/text_black"-->
<!--                android:textSize="@dimen/_12sdp"/>-->
<!--            <TextView-->
<!--                android:id="@+id/et_targetSaturation"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/black"-->
<!--                android:layout_marginStart="@dimen/_5sdp"-->
<!--                android:text="@string/lorem_ipsum"-->
<!--                android:singleLine="false"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/target_saturation"
                android:textColor="@color/text_black"/>

            <RadioGroup
                android:id="@+id/radioGroupSaturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/saturationLow"
                    android:checked="true"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="25dp"
                    android:textColor="@color/black"
                    android:text="88-92 %" />
                <RadioButton
                    android:id="@+id/saturationHigh"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="25dp"
                    android:textColor="@color/black"
                    android:text="94-98 %" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/weaningInstLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weaning_instructions"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_weaningInst"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_blue"
                android:singleLine="false"/>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_15sdp"-->
<!--            android:orientation="vertical">-->
<!--            <TextView-->
<!--                android:id="@+id/deliverySystemLabel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/delivery_system_used"-->
<!--                android:textColor="@color/text_black"-->
<!--                android:textSize="@dimen/_12sdp"/>-->
<!--            <TextView-->
<!--                android:id="@+id/et_deliverySystem"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/black"-->
<!--                android:layout_marginStart="@dimen/_5sdp"-->
<!--                android:text="@string/lorem_ipsum"-->
<!--                android:singleLine="false"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/deliverySystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/deliverySystemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_system_used"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_deliverySystem"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:backgroundTint="@color/darker_app_blue"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:singleLine="false"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctorNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_s_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:backgroundTint="@color/darker_app_blue"
                android:singleLine="false"/>

            <TextView
                android:id="@+id/designationLebel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_blue"
                android:singleLine="false"/>

            <TextView
                android:id="@+id/kmcNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmc_number"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/kmc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/darker_app_blue"
                android:singleLine="false"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/savePrescriptionBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/lighter_app_offwhite"
            android:layout_gravity="center"
            android:text="@string/save"
            android:outlineAmbientShadowColor="@color/darker_app_blue"
            android:textColor="@color/darker_app_blue"
            android:layout_marginTop="@dimen/_20sdp" />

    </LinearLayout>

</ScrollView>